[gd_scene load_steps=34 format=3 uid="uid://bdajnlmbn3y78"]

[ext_resource type="Script" path="res://src/scripts/character.gd" id="1_gfdkp"]
[ext_resource type="Texture2D" uid="uid://dp11aii0k5l1c" path="res://src/images/character/nekito/nekito damage.png" id="3_1t57e"]
[ext_resource type="Texture2D" uid="uid://bmiwyj0tqufjn" path="res://src/images/character/nekito/Nekito wacareando.png" id="4_orxnu"]
[ext_resource type="Texture2D" uid="uid://d0vsmccd5qef2" path="res://src/images/character/nekito/nekito jump.png" id="5_8ac55"]
[ext_resource type="Texture2D" uid="uid://dw02pbsl1elur" path="res://src/images/character/nekito/nekito idle (1).png" id="6_88dqs"]
[ext_resource type="Texture2D" uid="uid://by74vxv4nryn" path="res://src/images/character/nekito/nekito walking.png" id="7_t2djv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_unw0o"]
size = Vector2(17, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_38q4w"]
size = Vector2(21, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6fflh"]
size = Vector2(4, 10)

[sub_resource type="Animation" id="Animation_hlenn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_88dqs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_0nlba"]
resource_name = "damage"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_1t57e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 6]
}

[sub_resource type="Animation" id="Animation_2ra4l"]
resource_name = "drink"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.1, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("4_orxnu"), ExtResource("4_orxnu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 9, 10, 9]
}

[sub_resource type="Animation" id="Animation_tb6ve"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_88dqs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_omb8r"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_8ac55")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 4, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_qjolt"]
resource_name = "wacareo"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_orxnu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.6, 1.7, 1.8, 1.9, 2, 2.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_kikib"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_t2djv")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:vframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_52auf"]
_data = {
"RESET": SubResource("Animation_hlenn"),
"damage": SubResource("Animation_0nlba"),
"drink": SubResource("Animation_2ra4l"),
"idle": SubResource("Animation_tb6ve"),
"jump": SubResource("Animation_omb8r"),
"wacareo": SubResource("Animation_qjolt"),
"walk": SubResource("Animation_kikib")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o223e"]
animation = &"drink"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nm7go"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cjwte"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5yry8"]
animation = &"wacareo"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nwgh3"]
animation = &"walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cxjfb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2x7hl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cb3yp"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_k5skf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yyd21"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o2kbs"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nmjfc"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s73pq"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ggoh2"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ex4s3"]
states/drink/node = SubResource("AnimationNodeAnimation_o223e")
states/drink/position = Vector2(372.053, 214.791)
states/idle/node = SubResource("AnimationNodeAnimation_nm7go")
states/idle/position = Vector2(371.04, 100.174)
states/jump/node = SubResource("AnimationNodeAnimation_cjwte")
states/jump/position = Vector2(465.333, -19.2628)
states/wacareo/node = SubResource("AnimationNodeAnimation_5yry8")
states/wacareo/position = Vector2(206.667, 215.68)
states/walk/node = SubResource("AnimationNodeAnimation_nwgh3")
states/walk/position = Vector2(561.333, 100.643)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_cxjfb"), "idle", "walk", SubResource("AnimationNodeStateMachineTransition_2x7hl"), "walk", "idle", SubResource("AnimationNodeStateMachineTransition_cb3yp"), "idle", "jump", SubResource("AnimationNodeStateMachineTransition_k5skf"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_yyd21"), "idle", "drink", SubResource("AnimationNodeStateMachineTransition_o2kbs"), "drink", "idle", SubResource("AnimationNodeStateMachineTransition_nmjfc"), "wacareo", "idle", SubResource("AnimationNodeStateMachineTransition_s73pq"), "idle", "wacareo", SubResource("AnimationNodeStateMachineTransition_ggoh2")]
graph_offset = Vector2(0, 26.124)

[sub_resource type="LabelSettings" id="LabelSettings_84vfl"]
font_color = Color(0, 0, 0, 1)

[node name="Character" type="CharacterBody2D"]
collision_mask = 15
input_pickable = true
script = ExtResource("1_gfdkp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, 2.5)
shape = SubResource("RectangleShape2D_unw0o")
one_way_collision = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(3.5, 2)
shape = SubResource("RectangleShape2D_38q4w")

[node name="damage_dealer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="damage_dealer"]
position = Vector2(14, 5)
shape = SubResource("RectangleShape2D_6fflh")

[node name="wacareo_origin" type="Marker2D" parent="."]
position = Vector2(9, 3)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("6_88dqs")
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D"]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_52auf")
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite2D"]
tree_root = SubResource("AnimationNodeStateMachine_ex4s3")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="Label" type="Label" parent="."]
offset_left = -15.0
offset_top = -38.0
offset_right = 25.0
offset_bottom = -15.0
label_settings = SubResource("LabelSettings_84vfl")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
